# llm-benchmark

./: .gitignore  BENCH_RESULTS.md  NATIVE_DEPS.md  README.md  bench_latency.py  bench_results.tsv  flake.nix  pyproject.toml  schema.py  smoke.sh  toks.py  ttft.py
configs/: sglang-b200-bs1-baseline.yaml  sglang-b200-bs1-eagle3-nvidia.yaml  sglang-b200-bs1-eagle3.yaml  sglang-gpt-oss-120b.yaml  sglang-h100-bs1-eagle3-nvidia.yaml  sglang-h100x2-bs1-eagle3-nvidia.yaml  sglang-smoke.yaml  trt-llm-b200-bs1-baseline.yaml  trt-llm-b200-bs1-eagle3-bs14.yaml  trt-llm-b200-bs1-eagle3-default-draft.yaml  trt-llm-b200-bs1-eagle3-default-k1.yaml  trt-llm-b200-bs1-eagle3-default-k2-ll.yaml  trt-llm-b200-bs1-eagle3-default-k2.yaml  trt-llm-b200-bs1-eagle3-default-k4.yaml  trt-llm-b200-bs1-eagle3-k2-compile.yaml  trt-llm-b200-bs1-eagle3-k2.yaml  trt-llm-b200-bs1-eagle3-pdl.yaml  trt-llm-b200-bs1-eagle3-redhat.yaml  trt-llm-b200-bs1-eagle3-throughput.yaml  trt-llm-b200-bs1-eagle3-v2-ll-k3.yaml  trt-llm-b200-bs1-eagle3-v2-ll-k4.yaml  trt-llm-b200-bs1-eagle3-v2-lowlatency.yaml  trt-llm-b200-bs1-eagle3-v2.yaml  trt-llm-b200-bs1-lookahead.yaml  trt-llm-eagle3-extra-bs14.yaml  trt-llm-eagle3-extra-default-k1.yaml  trt-llm-eagle3-extra-default-k2-compile.yaml  trt-llm-eagle3-extra-default-k2-ll.yaml  trt-llm-eagle3-extra-default-k2.yaml  trt-llm-eagle3-extra-default-k4.yaml  trt-llm-eagle3-extra-default.yaml  trt-llm-eagle3-extra-h100.yaml  trt-llm-eagle3-extra-k2.yaml  trt-llm-eagle3-extra-redhat.yaml  trt-llm-eagle3-extra-throughput.yaml  trt-llm-eagle3-extra-tp2-ep2-triton.yaml  trt-llm-eagle3-extra-tp2-triton.yaml  trt-llm-eagle3-extra-v2-ll-k3.yaml  trt-llm-eagle3-extra-v2-ll-k4.yaml  trt-llm-eagle3-extra-v2-lowlatency.yaml  (+51 more)
proxy/: Cargo.toml
proxy/src/: config.rs  engine.rs  main.rs  meta.rs  proxy.rs  ready.rs
sglang/: pyproject.toml
trt-llm/: pyproject.toml
vllm/: pyproject.toml
