[project]
name = "sglang-env"
version = "0.1.0"
description = "SGLang serving env, bleeding-edge 2026-04-21"
requires-python = ">=3.10,<3.14"
dependencies = [
  # sglang pins its own torch==2.9.1, flashinfer==0.6.7.post3,
  # sglang-kernel==0.4.1, cuda-python==12.9, transformers==5.3.0, etc.
  # The extras below only restate torch so the [tool.uv.sources] routing
  # picks the right cu wheel channel per GPU variant.
  "sglang[all]==0.5.10.post1",
  "huggingface-hub",
  "hf-transfer",
]

[project.optional-dependencies]
# Hopper SM_90 — CUDA 12.9 torch wheels.
h100 = [
  "torch==2.9.1",
  "torchvision==0.24.1",
  "torchaudio==2.9.1",
]
h200 = [
  "torch==2.9.1",
  "torchvision==0.24.1",
  "torchaudio==2.9.1",
]
# Blackwell SM_100 — CUDA 13.0 torch wheels. sgl-kernel cu130 wheel
# availability has been patchy (issues #14327, #18392); if this fails, drop
# to a local wheel from github.com/sgl-project/sglang/releases.
b200 = [
  "torch==2.9.1",
  "torchvision==0.24.1",
  "torchaudio==2.9.1",
]

[tool.uv]
package = false
conflicts = [
  [
    { extra = "h100" },
    { extra = "h200" },
    { extra = "b200" },
  ],
]

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu129", extra = "h100" },
  { index = "pytorch-cu129", extra = "h200" },
  { index = "pytorch-cu130", extra = "b200" },
]
torchvision = [
  { index = "pytorch-cu129", extra = "h100" },
  { index = "pytorch-cu129", extra = "h200" },
  { index = "pytorch-cu130", extra = "b200" },
]
torchaudio = [
  { index = "pytorch-cu129", extra = "h100" },
  { index = "pytorch-cu129", extra = "h200" },
  { index = "pytorch-cu130", extra = "b200" },
]
