[project]
name = "trtllm-env"
version = "0.1.0"
description = "TensorRT-LLM serving env, bleeding-edge 2026-04-21"
requires-python = ">=3.10,<3.14"
dependencies = [
  # 1.2.1 (2026-04-20) is newer than 1.3.0rc12 (2026-04-17) and stable.
  # TRT-LLM wheels are NOT on PyPI — they live on https://pypi.nvidia.com
  # which is declared as the `nvidia` index below.
  "tensorrt-llm==1.2.1",
  "huggingface-hub",
  "hf-transfer",
]

# ---------------------------------------------------------------------------
# Extras are split into two axes — pick one from each:
#
#   GPU variant      : h100 | h200 | b200      (selects torch cu130 wheel +
#                                               parity with vllm/sglang)
#   Host driver      : driver-r580 | driver-r590 | driver-r595
#                                              (selects nvidia-ml-py whose
#                                               NVML struct layout matches
#                                               the host's libnvidia-ml.so)
#
# Example provisioning on an H100 host running driver 580.126.09:
#
#   uv sync --extra h100 --extra driver-r580
#
# Why the driver axis exists:
# `tensorrt_llm._utils.confidential_compute_enabled()` calls
# `nvmlSystemGetConfComputeSettings(c_nvmlSystemConfComputeSettings_v1_t())`
# at engine init. That struct's layout changed between NVML versions, and
# `nvidia-ml-py` ships per-driver-branch wheels named `13.<driver>.<patch>`.
# If the pinned binding targets a newer driver branch than the host's
# libnvidia-ml.so, the ctypes call reads past the struct → **silent
# segfault during `Model init`** (the crash is in C, not catchable).
#
# tensorrt-llm 1.2.1 pins `nvidia-ml-py>=13`, so only r580+ wheels are
# listed. On r570/r575 hosts downgrade `tensorrt-llm` to 1.1.x (whose
# `nvidia-ml-py>=12,<13` pin lets you use `nvidia-ml-py==12.575.51` or
# `12.570.172`) — that's out of scope for this project.
#
# Look up the host driver with:
#   nvidia-smi --query-gpu=driver_version --format=csv,noheader
# ---------------------------------------------------------------------------

[project.optional-dependencies]
# GPU-variant extras: pin torch + per-variant tweaks.
# TRT-LLM 1.2+ is a cu13 stack across the board. torch <=2.10.0a0,>=2.9.1
# pin forces 2.9.1 (2.10.0 final is explicitly excluded). The three GPU
# variants are wheel-identical today — the split is kept for parity with
# vllm/sglang and so the B200 extra can diverge later.
h100 = [
  "torch==2.9.1",
  "torchvision==0.24.1",
  "torchaudio==2.9.1",
  "mpi4py==4.0.1",
]
h200 = [
  "torch==2.9.1",
  "torchvision==0.24.1",
  "torchaudio==2.9.1",
  "mpi4py==4.0.1",
]
b200 = [
  "torch==2.9.1",
  "torchvision==0.24.1",
  "torchaudio==2.9.1",
  "mpi4py==4.0.1",
]

# Host-driver extras: pin nvidia-ml-py to match libnvidia-ml.so ABI.
# Pick exactly one that matches `nvidia-smi --query-gpu=driver_version`.
driver-r580 = ["nvidia-ml-py==13.580.126"]  # verified on this host (580.126.09)
driver-r590 = ["nvidia-ml-py==13.590.48"]
driver-r595 = ["nvidia-ml-py==13.595.45"]

[tool.uv]
package = false
conflicts = [
  [
    { extra = "h100" },
    { extra = "h200" },
    { extra = "b200" },
  ],
  [
    { extra = "driver-r580" },
    { extra = "driver-r590" },
    { extra = "driver-r595" },
  ],
]

[[tool.uv.index]]
name = "nvidia"
url = "https://pypi.nvidia.com"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
tensorrt-llm = { index = "nvidia" }
torch = [
  { index = "pytorch-cu130", extra = "h100" },
  { index = "pytorch-cu130", extra = "h200" },
  { index = "pytorch-cu130", extra = "b200" },
]
torchvision = [
  { index = "pytorch-cu130", extra = "h100" },
  { index = "pytorch-cu130", extra = "h200" },
  { index = "pytorch-cu130", extra = "b200" },
]
torchaudio = [
  { index = "pytorch-cu130", extra = "h100" },
  { index = "pytorch-cu130", extra = "h200" },
  { index = "pytorch-cu130", extra = "b200" },
]
