[project]
name = "trtllm-env"
version = "0.1.0"
description = "TensorRT-LLM serving env"
requires-python = ">=3.10,<3.14"
# tensorrt-llm, torch, and nvidia-ml-py are all pulled in by the host-
# driver extra below, so each install is a self-consistent cu13 stack.
dependencies = [
  "huggingface-hub",
  "hf-transfer",
  "mpi4py==4.0.1",
]

# ---------------------------------------------------------------------------
# Pick exactly one driver-r* extra that matches your host:
#
#   nvidia-smi --query-gpu=driver_version --format=csv,noheader
#
# Only r580+ branches are listed because there is no working trt-llm
# config for older drivers:
#
#   * tensorrt-llm 1.1.0 and 1.2.x both pin `torch==2.9.x`.
#   * torch 2.9 ships only cu128/cu130 wheels.
#   * cu128/cu130 wheels call CUDA Driver API symbols (e.g.
#     `cuKernelGetName`, added in CUDA 12.4) that don't exist on
#     pre-r550 libcuda.so. Importing tensorrt_llm crashes with
#     `undefined symbol: cuKernelGetName` before NVML is even reached.
#   * Going back to a trt-llm release old enough for CUDA 12.2 (~0.12.x)
#     loses gpt-oss support, which is the whole point of this benchmark.
#
# So: r535 / r570 / r575 hosts cannot run this engine. Use vllm or
# sglang on those hosts (both have devshells in this flake) — they
# accept torch wheels on a wider driver range because they don't pull
# in trt-llm's pinned cu13 toolchain.
#
# Driver branch ↔ nvidia-ml-py wheel:
# nvidia-ml-py ships per-driver-branch wheels keyed by major version
# (13.x for r58x+). Picking a wheel from a newer branch than the host's
# libnvidia-ml.so makes nvmlSystemGetConfComputeSettings read past the
# struct → silent C-side segfault during Model init. The driver extra
# pins the matching nvidia-ml-py so this crash can't happen.
# ---------------------------------------------------------------------------

[project.optional-dependencies]
driver-r580 = [
  "tensorrt-llm==1.2.1",
  "torch==2.9.1",
  "torchvision==0.24.1",
  "torchaudio==2.9.1",
  "nvidia-ml-py==13.580.126",
]
driver-r590 = [
  "tensorrt-llm==1.2.1",
  "torch==2.9.1",
  "torchvision==0.24.1",
  "torchaudio==2.9.1",
  "nvidia-ml-py==13.590.48",
]
driver-r595 = [
  "tensorrt-llm==1.2.1",
  "torch==2.9.1",
  "torchvision==0.24.1",
  "torchaudio==2.9.1",
  "nvidia-ml-py==13.595.45",
]

[tool.uv]
package = false
# Exactly one driver extra at a time; uv refuses two from the same group.
conflicts = [
  [
    { extra = "driver-r580" },
    { extra = "driver-r590" },
    { extra = "driver-r595" },
  ],
]

[[tool.uv.index]]
name = "nvidia"
url = "https://pypi.nvidia.com"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
tensorrt-llm = { index = "nvidia" }
torch = [
  { index = "pytorch-cu130", extra = "driver-r580" },
  { index = "pytorch-cu130", extra = "driver-r590" },
  { index = "pytorch-cu130", extra = "driver-r595" },
]
torchvision = [
  { index = "pytorch-cu130", extra = "driver-r580" },
  { index = "pytorch-cu130", extra = "driver-r590" },
  { index = "pytorch-cu130", extra = "driver-r595" },
]
torchaudio = [
  { index = "pytorch-cu130", extra = "driver-r580" },
  { index = "pytorch-cu130", extra = "driver-r590" },
  { index = "pytorch-cu130", extra = "driver-r595" },
]
